--- a/index.html
+++ b/index.html
@@ -124,11 +124,11 @@
              Highly seasoned and reliable Web Designer with a strong work ethic and customer service and satisfaction record. Adept multitasker capable of bringing simultaneous web page creation and repair projects to completion with full accuracy and efficiency. Able to function well independently 
             </p>
             <div class="row icon-boxes">
-              <div class="col-md-6">
+              <div class="col-md-6 col-6 mt-4 mt-md-0">
                 <img src="assets/img/clock-svgrepo-com.svg"  width="100" height="100" class="pb-4">
                 <h4>ON TIME</h4>
               </div>
-              <div class="col-md-6 mt-4 mt-md-0">
+              <div class="col-md-6 col-6 mt-4 mt-md-0">
                 <img src="assets/img/target-2-svgrepo-com.svg"  width="100" height="100" class="pb-4">
                 <h4>100% ACCURACY</h4>  
               </div>
